update homepage and tags

--- a/content/climate/2024-07-10-गल्फस्ट्रीम.md
+++ b/content/climate/2024-07-10-गल्फस्ट्रीम.md
@@ -12,6 +12,7 @@ image: /images/article-3/image1.jpeg
 tags:
     - Climate
     - Ocean
+    - marathi
 ---
 
 ‘महासागरातील प्रवाह’ या लेखमालिकेतील गेल्या २ लेखांमध्ये आपण सागरी प्रवाहांचा परिचय करून घेतला आणि इंडोनेशियन प्रवाहाची संवादरूपाने अधिक माहिती मिळवली. मालिकेमधल्या तिसऱ्या लेखात आपण ‘गल्फ स्ट्रीम’ला प्रश्न विचारून त्याविषयी अधिक माहिती घेणार आहोत. तिसरा लेख हा ‘महासागरातील प्रवाह’ या लेखमालिकेतील दुसऱ्या लेखाचेच सातत्य आहे. (दुसऱ्या लेखाची लिंक :- [https://t.ly/RjfXQ](https://www.nature.com/nature/volumes/452/issues/7184)
