--- a/content/climate/2024-08-15-मानवी हस्तक्षेपाचे परिणाम.md
+++ b/content/climate/2024-08-15-मानवी हस्तक्षेपाचे परिणाम.md
@@ -12,6 +12,7 @@ image: /images/article-4/the-day-after-tomorrow.jpg
 tags:
     - climate
     - ocean
+    - marathi
 ---
 
 महासागरीय प्रवाह पृथ्वीच्या हवामान प्रणालीमध्ये महत्त्वपूर्ण भूमिका बजावतात, जगभरात उष्णतावहन करतात आणि प्रादेशिक हवामानव्यवस्थेवर परिणाम करतात. मागील लेखांमध्ये, आपण महासागरातील प्रवाहांबाबतच्या मूलभूत गोष्टींसोबत समुद्रातील उष्णतावहनातील त्यांची भूमिका समजावून घेतली. त्याचबरोबर इंडोनेशियन प्रवाह आणि गल्फ स्ट्रीम सारख्या प्रवाहांची अधिक माहिती करून घेतली. तथापि, मानवी हस्तक्षेप या गुंतागुंतीच्या प्रणालींवर कसा परिणाम करू शकतो आणि त्यांच्या नाजूक समतोलामध्ये कसा व्यत्यय आणू शकतो हे समजून घेणे आवश्यक आहे. लेखमालेतील या शेवटच्या लेखात, आपण काही ऐतिहासिक उदाहरणे आणि आपल्या कृतींचे महासागरीय प्रवाहांवर होणारे व्यापक परिणाम तपासून पाहू.
