--- a/content/climate/2024-12-15-अर्का आणि अरुणिका.md
+++ b/content/climate/2024-12-15-अर्का आणि अरुणिका.md
@@ -13,6 +13,7 @@ tags:
     - Climate
     - cloud
     - technology
+    - marathi
 ---
 __आकृती 1:__ सुपर कॉम्पुटर अर्का चे उद्घाटन. सौजन्य: इंडियन इन्स्टिटय़ूट ऑफ ट्रॉपिकल मेटिऑरॉलॉजी (IITM)
 
