--- a/content/diary/दिंडी (…शाळेमधली).md
+++ b/content/diary/दिंडी (…शाळेमधली).md
@@ -10,6 +10,7 @@ image: /images/life/dindi.jpg
 tags:
     - life
     - diary
+    - marathi
 ---
 आज रोजच्याप्रमाणे अभ्यासिकेत गेलो होतो.
 नेहमीसारखाच—शांत, एकटा. अभ्यासात लक्ष लागलेलं. अर्धा-पाऊण तास झाला असेल, तोच अचानक बाहेरून दिंडीतल्या गाण्यांचा आवाज कानावर आदळला. खिडकी उघडीच होती, त्यामुळे आवाज सरळ डोक्यात घुसला.
