--- a/content/diary/रात बाकी, बात बाकी.md
+++ b/content/diary/रात बाकी, बात बाकी.md
@@ -10,6 +10,7 @@ image: /images/life/study.jpg
 tags:
     - life
     - diary
+    - marathi
 ---
 
 बी. एस्सी. च्या तिसऱ्या वर्षात असताना सुचलेल्या ओळी.
