--- a/content/life/मी भारत बोलतोय.md
+++ b/content/life/मी भारत बोलतोय.md
@@ -10,6 +10,7 @@ image: /images/life/india.jpeg
 tags:
     - life
     - diary
+    - marathi
 ---
 
 १५ ऑगस्ट चा दिवस होता. बरेचजण स्वातंत्र्यदिन साजरा करण्यासाठी कॉलेजमध्ये एकत्र आले होते. कोणीतरी भारताच्या नकाशाची आउटलाइन फळ्यावर काढायचा चांगला प्रयत्न केला होता. थोड्याच वेळात कार्यक्रम सुरु झाला आणि एक तासात संपला सुद्धा. मग सुरु झाली, ती दरवर्षीची गाणी.
