--- a/content/climate/2024-06-05-इंडोनेशियन प्रवाह.md
+++ b/content/climate/2024-06-05-इंडोनेशियन प्रवाह.md
@@ -12,6 +12,7 @@ image: /images/article-2/ITF_INSTANT_Sprintall2009.png
 tags:
     - Climate
     - Ocean
+    - marathi
 ---
 हवामान हा जगभरात सर्वाधिक चर्चिला जाणारा आणि फॉलो केला जाणारा विषय आहे. एल निनो – ला निना सारख्या अनेक हवामानविषयक घटना आहेत आणि त्यांचे परिणाम जगभरात प्रसिद्ध आहेत. एल निनो – ला नीना भारतासाठी महत्त्वपूर्ण आहे कारण त्याचा मान्सून हंगामातील पावसावर आणि अखेरीस, नदीतील जलस्रोतांवर आणि शेतीच्या उत्पन्नावर परिणाम होतो. पावसाचा नदीतील जलस्रोतांवर परिणाम होतो हे सामान्य समज आहे. तथापि, ही एका नदीची कथा आहे जी पावसाळ्यात भारतातील पावसावर परिणाम करू शकते. जमिनीवरील नद्यांच्या विपरीत, ही नदी महासागरात वाहते आणि ती तुम्हाला माहीत असलेल्या कोणत्याही नदीपेक्षा हजारो पट मोठी आहे.
 
